@@ -1,0 +1,1 @@
+declare x as restricted reference to int
