@@ -1,0 +1,1 @@
+cdecl @ @ -xc++ @ explain int &__restrict x @ 0
